@@ -1,6 +1,7 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
 2012-03-24 mmichaud <michael.michaud@free.fr>
+  * FR 3472020 : use a numeric pattern to save long attribute names in dbf
   * FR 3488025 : Delete existing sbn/sbx/qix files when writing a shp
   
 2012-03-18 mmichaud <michael.michaud@free.fr>
